[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/levels_s.gd" type="Script" id=1]
[ext_resource path="res://assets/Level_Sizes/Level.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=2]

resource_local_to_scene = true
custom_solver_bias = 0.0
extents = Vector2( 10, 10 )
_sections_unfolded = [ "Resource" ]

[sub_resource type="RectangleShape2D" id=3]

resource_local_to_scene = true
custom_solver_bias = 0.0
extents = Vector2( 10, 10 )
_sections_unfolded = [ "Resource" ]

[node name="levels_s" type="Node2D" index="0"]

position = Vector2( 0, 635.602 )
script = ExtResource( 1 )

[node name="right" type="StaticBody2D" parent="." index="0"]

position = Vector2( 750, 0 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Collision", "Pickable", "Transform" ]

[node name="right_sprite" type="Sprite" parent="right" index="0"]

texture = ExtResource( 2 )
_sections_unfolded = [ "Animation", "Offset", "Region", "Transform", "Z Index" ]

[node name="right_collision" type="CollisionShape2D" parent="right" index="1"]

shape = SubResource( 2 )
_sections_unfolded = [ "Material", "Transform", "Visibility", "Z Index" ]

[node name="left" type="StaticBody2D" parent="." index="1"]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="left_sprite" type="Sprite" parent="left" index="0"]

texture = ExtResource( 2 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="left_collision" type="CollisionShape2D" parent="left" index="1"]

shape = SubResource( 3 )

[connection signal="inclosure_end" from="." to="." method="_on_levels_s_inclosure_end"]


